Based on The Powder Toy, Snapshot-241.
- Updated TPT code.