@@ -2090,7 +2090,7 @@ require_preload__["tptmp.client.config"] = function()
 
 	local common_config = require("tptmp.common.config")
 	
-	local versionstr = "v2.0.24"
+	local versionstr = "v2.0.25"
 	
 	local config = {
 		-- ***********************************************************************
@@ -4322,6 +4322,9 @@ require_preload__["tptmp.client.side_button"] = function()
 	function side_button_i:update_notif_count_()
 		local notif_count = self.notif_count_func_()
 		local notif_important = self.notif_important_func_()
+		if self.window_status_func_() == "floating" and not notif_important then
+			notif_count = 0
+		end
 		if self.notif_count_ ~= notif_count or self.notif_important_ ~= notif_important then
 			self.notif_count_ = notif_count
 			self.notif_important_ = notif_important
@@ -5440,7 +5443,7 @@ require_preload__["tptmp.client.window"] = function()
 		local cli = self.client_func_()
 		if cli then
 			if (" " .. str .. " "):lower():find("[^a-z0-9-_]" .. cli:nick():lower() .. "[^a-z0-9-_]") then
-				return true
+				return "highlight"
 			end
 		end
 	end
@@ -5682,6 +5685,7 @@ require_preload__["tptmp.client.window"] = function()
 			table.insert(self.backlog_text_, {
 				padding = padding,
 				pushed_at = lines[i].msg.pushed_at,
+				highlight = lines[i].msg.important == "highlight",
 				text = lines[i].wrapped,
 				box_width = box_width,
 			})
@@ -5791,7 +5795,10 @@ require_preload__["tptmp.client.window"] = function()
 	end
 	
 	function window_i:handle_tick()
-		if self.backlog_auto_scroll_ then
+		local floating = self.window_status_func_() == "floating"
+		local now = socket.gettime()
+	
+		if self.backlog_auto_scroll_ and not floating then
 			self.backlog_last_seen_ = self.backlog_last_wrapped_
 		else
 			if self.backlog_last_seen_ < self.backlog_unique_ and not self.backlog_enable_marker_ then
@@ -5824,9 +5831,6 @@ require_preload__["tptmp.client.window"] = function()
 			self.dragger_last_y_ = self.dragger_last_y_ + diff_y
 			self:save_window_rect_()
 		end
-	
-		local floating = self.window_status_func_() == "floating"
-		local now = socket.gettime()
 	
 		local border_colour = colours.appearance[self.in_focus and "active" or "inactive"].border
 		local background_colour = colours.appearance.inactive.background
@@ -5866,6 +5870,9 @@ require_preload__["tptmp.client.window"] = function()
 				local alpha = 1
 				if floating then
 					alpha = math.min(1, (fades_at - now) / config.floating_fade_time)
+				end
+				if self.backlog_text_[i].highlight then
+					gfx.fillRect(self.pos_x_ + 1, self.pos_y_ + self.backlog_text_y_ + i * 12 - 14, self.width_ - 2, 12, 255, 50, 50, alpha * 64)
 				end
 				gfx.drawText(self.pos_x_ + 4 + self.backlog_text_[i].padding, self.pos_y_ + self.backlog_text_y_ + i * 12 - 12, self.backlog_text_[i].text, 255, 255, 255, alpha * 255)
 			end
@@ -6049,7 +6056,7 @@ require_preload__["tptmp.client.window"] = function()
 						table.sort(nicks)
 						local index = 1
 						for i = 1, #nicks do
-							if nicks[i] == left_word and nicks[i + 1] then
+							if nicks[i]:lower() == left_word and nicks[i + 1] then
 								index = i + 1
 							end
 						end
